namespace tp4;

public struct ParticleConsts
{
    public double Mass { get; set; }

    public override string ToString()
    {
        return $"Mass={Mass}";
    }
}